--- a/config
+++ b/config
@@ -1,6 +1,5 @@
-local version = "v3.1"
-local saltHash = "T01hFg62zY"
-local adventureCraft = "xkD4FcaB"
-local firewolf = "A7wGH3ty"
-local skullPong = "8LU0sjFR"
-local guessThatColor = "cQ1CbfAg"
+enderOS = "Vx4Xapyt"
+adventureCraft = "xkD4FcaB"
+firewolf = "A7wGH3ty"
+skullPong = "8LU0sjFR"
+guessThatColor = "cQ1CbfAg"
