--- a/config
+++ b/config
@@ -1,5 +1,5 @@
-enderOS = "Vx4Xapyt"
-adventureCraft = "xkD4FcaB"
-firewolf = "A7wGH3ty"
-skullPong = "8LU0sjFR"
-guessThatColor = "cQ1CbfAg"
+"Vx4Xapyt"
+"xkD4FcaB"
+"A7wGH3ty"
+"8LU0sjFR"
+"cQ1CbfAg"
