--- a/config
+++ b/config
@@ -1,6 +1,1 @@
---Config
-"xkD4FcaB"
-"A7wGH3ty"
-"8LU0sjFR"
-"cQ1CbfAg"
-"Vx4Xapyt"
+local config = {"Vx4Xapyt","xkD4FcaB","A7wGH3ty","8LU0sjFR","cQ1CbfAg"}
